# Voxium

./: Cargo.toml  README.md
assets/world/biomes/: default.ron
src/: main.rs
src/world/: biome.rs  mod.rs  voxel_data.rs
