[package]
name = "voxium"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[dependencies]
bevy = "0.7"
bevy_flycam = "*"
bevy_atmosphere = "0.3.1"
ron = "*"
rand = "*"
noise = "0.7.0"